# molflow_sources

./: .gitignore  .gitlab-ci.yml  .gitmodules  AddVertex.cpp  AlignFacet.cpp  BuildIntersection.cpp  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CollapseSettings.cpp  CollapseSettings.h  Copa  Distributions.cpp  Distributions.h  ExtrudeFacet.cpp  Facet.cpp  Facet.h  FacetAdvParams.cpp  FacetAdvParams.h  FacetCoordinates.cpp  FacetCoordinates.h  FacetDetails.cpp  FacetDetails.h  FacetMesh.cpp  FacetMesh.h  File.cpp  File.h  FormulaSettings.cpp  Geometry.cpp  Geometry.h  GeometryEditor.cpp  GeometryRender.cpp  GeometryViewer.cpp  GeometryViewer.h  GlobalSettings.cpp  GlobalSettings.h  ImportDesorption.cpp  ImportDesorption.h  Intersect3Planes.cpp  Intersect3Planes.h  (+88 more)
CMake/: FindOptiX.cmake  Molflow.cmake  MolflowGPU.cmake
CMake/clipper/: CMakeLists.txt
CMake/compress/: CMakeLists.txt
CMake/cuda_kernel/: CMakeLists.txt
CMake/flow_gpu/: CMakeLists.txt
CMake/gpu_testsuite/: CMakeLists.txt  configure_optix.cmake
CMake/gpusim/: CMakeLists.txt  configure_optix.cmake  nvcuda_compile_ptx.cmake
CMake/molflow_cli/: CMakeLists.txt
CMake/molflow_core/: CMakeLists.txt
CMake/molflow_gpu/: CMakeLists.txt
CMake/molflow_gpusim/: configure_optix.cmake  nvcuda_compile_ptx.cmake
CMake/molflow_gpusub/: CMakeLists.txt  configure_optix.cmake
CMake/molflow_gui/: CMakeLists.txt
CMake/molflow_sim/: CMakeLists.txt
CMake/molflow_sub/: CMakeLists.txt
CMake/molflow_win/: CMakeLists.txt
CMake/nativefiledialog/: CMakeLists.txt
CMake/png_zlib_win_library/: CMakeLists.txt
CMake/pugixml/: CMakeLists.txt
CMake/sdl_savepng/: CMakeLists.txt
CMake/truncatedgaussian/: CMakeLists.txt
CMake/ziputils/: CMakeLists.txt
Desorption_yields/: Jason_NEG_H2.txt
GLApp/: GLApp.cpp  GLApp.h  GLButton.cpp  GLButton.h  GLChart.h  GLColorBox.cpp  GLFileBox.cpp  GLFont.cpp  GLFont.h  GLGradient.cpp  GLLabel.cpp  GLLabel.h  GLList.cpp  GLList.h  GLParser.cpp  GLProgress.cpp  GLProgress.h  GLTextArea.cpp  GLTextArea.h  GLTextField.cpp  GLTextField.h  GLToggle.cpp  GLToggle.h  GLToolkit.cpp  GLToolkit.h  GLTypes.h  GLWindow.cpp  GLWindow.h  GLWindowManager.cpp
GLApp/GLChart/: GLAxis.cpp  GLChart.cpp  GLChartOptions.cpp  GLDataView.cpp  GLDataView.h
GPUSim/: CUDABuffer.h  DeviceBuffers.h  GPUDefines.h  Geometry.cu  HostData.h  LaunchParams.h  Model.cpp  Model.h  ModelReader.cpp  ModelReader.h  MolTracer.cpp  MolTracer.h  MolflowModelParser.cpp  MolflowModelParser.h  OptixControl.cpp  OptixControl.h  OptixController.cpp  OptixController.h  OptixPolygon.h  Poly2TriConverter.cpp  RNGKernel.cuh  RandomWrapper.h  RayGeneration.cu  SampleRenderer.cpp  SampleRenderer.h  SampleWindow.cpp  SampleWindow.h  SimulationOptiX.cpp  SimulationOptiX.h  TestSimulator.cpp  TraceProcessing.cu  cudaRandom.cu  cudaRandom.cuh  devicePrograms.cu  helper_output.h
GPUSim/CUDA/: CommonFunctions.cuh  Geometry.cu  RNGKernel.cu  RayGeneration.cu  TraceProcessing.cu  cudaRandom.cu
SMP/: Process.c  SMP.h  ShMemory.cpp  ShMemoryCPP.cpp
TinyXML/: tinyxml.cpp
ZipUtils/: zip.cpp
algobench/: CMakeLists.txt  benchmark_suite.cpp
cmake_modules/: molflow_proj.cmake  readme.txt
cmake_modules/molflow_cli/: CMakeLists.txt
cmake_modules/molflow_core/: CMakeLists.txt
cmake_modules/molflow_gui/: CMakeLists.txt
compress/: compress.cpp
copy_to_build/: copy2build_win.bat
include/: CUDABuffer.h  optix7.h
include/common_cuda/: helper_math.h
include/windows_only/: readme.txt
lib_external/wbenny_ziplib/: Makefile_linux  Makefile_macos  readme.md
src/: FacetAdvParams.cpp  FacetAdvParams.h  FacetDetails.cpp  FacetDetails.h  FlowCLI.cpp  FormulaEvaluator_MF.cpp  FormulaEvaluator_MF.h  GeometryRender.cpp  GeometrySimu.cpp  GeometrySimu.h  GeometryViewer.cpp  Geometry_sub.cpp  Geometry_sub.h  GlobalSettings.cpp  GlobalSettings.h  ImportDesorption.cpp  ImportDesorption.h  Initializer.cpp  Initializer.h  LoaderXML.cpp  LoaderXML.h  MolFlow.cpp  MolFlow.h  MolflowBuffer.cpp  MolflowBuffer.h  MolflowCLI.cpp  MolflowCLI.hpp  MolflowDisplayTypes.h  MolflowFacet.cpp  MolflowGeometry.cpp  MolflowGeometry.h  MolflowHitCounter.cpp  MolflowHitCounter.h  MolflowTypes.cpp  MolflowTypes.h  MolflowWorker.cpp  MomentsEditor.cpp  MomentsEditor.h  Movement.cpp  Movement.h  (+31 more)
src/GPUSim/: DeviceBuffers.cpp  DeviceBuffers.h  GPUDefines.h  GPUSettings.h  HostData.h  InitializerGPU.cpp  InitializerGPU.h  LaunchParams.h  Model.cpp  Model.h  ModelReader.cpp  ModelReader.h  MolflowGPUCLI.cpp  MolflowModelParser.cpp  MolflowModelParser.h  OptixController.cpp  OptixController.h  OptixPolygon.h  PerRayData.h  Poly2TriConverter.cpp  Poly2TriConverter.h  RandomWrapper.cpp  Serializations.h  SimControllerGPU.cpp  SimControllerGPU.h  SimulationControllerGPU.cpp  SimulationControllerGPU.h  SimulationGPU.cpp  SimulationGPU.h  SimulationOptiX.cpp  SimulationOptiX.h  TestSimulator.cpp  TestSimulator_v2.cpp  gpuSub.cpp  jetbrains_indexing.h
src/IO/: CSVExporter.cpp  CSVExporter.h  Config.h  InterfaceXML.cpp  InterfaceXML.h  LoaderXML.cpp  LoaderXML.h  SettingsIO_Molflow.cpp  SettingsIO_Molflow.h  WriterXML.cpp  WriterXML.h
src/Interface/: BackgroundGas.cpp  BackgroundGas.h  FacetAdvParams.cpp  FacetAdvParams.h  FacetDetails.cpp  FacetDetails.h  GeometryRender.cpp  GeometryViewer.cpp  GlobalSettings.cpp  GlobalSettings.h  ImguiGPUControl.cpp  ImguiGPUControl.h  ImguiTextureScaling.h  ImportDesorption.cpp  ImportDesorption.h  Intersect3Planes.cpp  Intersect3Planes.h  MeasureForce.cpp  MeasureForce.h  MomentsEditor.cpp  MomentsEditor.h  Movement.cpp  Movement.h  OutgassingMap.cpp  OutgassingMapWindow.cpp  OutgassingMapWindow.h  ParameterEditor.cpp  ParameterEditor.h  TestCube.cpp  (+15 more)
src/TimeDependent/: CMakeLists.txt  SkipList.cpp  SkipList.h  TDAlgorithms.cpp  TDAlgorithms.h  TDMoments.cpp  TDMoments.h  TDTestsuite.cpp  TDTypes.h
tests/: CMakeLists.txt  CMakeLists.txt.in  example.cpp  simulation.cfg  simulation_testsuit.cpp  simulation_testsuite.cpp  simulation_tex.cfg  test_lr1000_pipe.xml  test_lr10_pipe_prof.xml  test_lr10_pipe_tex.xml  testsuite.cpp
(+60 files in other folders)
